src/styles/sidebar/index.css
@import "../colors.css";
@import "../media.css";
@import "./properties.css";
@import "./sidebar-header.css";
@import "./sidebar-content.css";
@import "./sidebar-link.css";
@import "./sidebar-sections.css";

.sidebar,
.sidebar * {
  box-sizing: border-box;
}

.sidebar {
  background-color: var(--sidebar-background-color);
  display: block;
  min-height: 100vh;
  flex: 0 0 var(--sidebar-width);
}

.section {
  height: var(--sidebar-section-height);
  overflow: auto;
}

.items {
  position: relative;

  & ul {
    padding: 0;
  }
}

.collapsed {
  flex: 0 0 var(--sidebar-collapsed-width);

  & header {
    justify-content: center;
  }

  & header svg {
    color: var(--sidebar-collapsed-header-icon-color);
  }

  & .text span {
    display: none;
  }

  & .text {
    text-align: center;
  }

  & .text svg {
    margin: var(--sidebar-collapsed-text-link-margin);
  }

  & .menu svg {
    width: var(--sidebar-collapsed-icon-width);
    height: var(--sidebar-collapsed-icon-height);
  }
}

@media (--media-desk) {

  .sidebar {
    width: var(--sidebar-width-desk);
  }

  .collapsed {
    width: var(--sidebar-collapsed-width-desk);
  }
}

@media (--media-tv) {

  .sidebar {
    width: var(--sidebar-width-tv);
  }

  .collapsed {
    width: var(--sidebar-collapsed-width-tv);
  }
}

